# codecrafters-shell-rust

./: Cargo.toml  README.md  command.txt
.cargo/: config.toml
.codecrafters/: run.sh
examples/: from_file.rs  from_std.rs  quick-dev.rs
src/: config.rs  error.rs  lib.rs  main.rs  splitter.rs
src/extensions/: mod.rs  text_ext.rs
src/shell/: env.rs  error.rs  mod.rs
